# EnvironmentMonitor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
Zadanie_BLE/gatt_client/: CMakeLists.txt  sdkconfig
Zadanie_BLE/gatt_client/main/: gattc_demo.c
Zadanie_BLE/gatt_server/: pyvenv.cfg
Zadanie_BLE/gatt_server/main/: gatts_demo.c
components/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h  i2c_driver.c  i2c_driver.h
components/main/: CMakeLists.txt  http_request.c  http_request.h  monitor_main.c  mqtt_publisher.c  mqtt_publisher.h  wifi_ap.c  wifi_station.c  wifi_station.h
components/sensor_handler/: CMakeLists.txt  light_sensor.c  light_sensor.h  sensors.c  sensors.h
main/: CMakeLists.txt  ble_sensor.c  ble_sensor.h  bmp280.c  bmp280.h  http_request.h  http_server.c  http_server.h  i2c_driver.c  i2c_driver.h  monitor_main.c  mqtt_publisher.c  mqtt_publisher.h  ota_update.c  ota_update.h  power_manager.c  power_manager.h  sdkconfig  wifi_ap.c  wifi_ap.h  wifi_station.c  wifi_station.h
mqtt_client_PC/: main.py  mqtt_config.json
mqtt_client_PC/templates/: bmp280_config.html  config.html  data.html  index.html
project/: bmp280_config.json  environment_monitor.db  mqtt_config.json  requirements.txt  run.py  test.py
project/app/: database.py  extensions.py  main.py  mqtt_handler.py
project/app/routes/: auth.py  config.py  devices.py  ota.py  subscriptions.py  users.py
project/app/templates/: account_settings.html  add_device.html  add_sensor.html  bmp280_config.html  (+11 more)
sensors/: CMakeLists.txt  bmp280_sensor.c  bmp280_sensor.h
